--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
@@ -28,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "express": "^4.18.2",
+    "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
