--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
